--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <ul>
-  <li><a href="https://wasmilk.github.io/testtttt/">Go</a></li>
+  <li><a href=https://edd3-240f-68-ece5-1-d97d-fdc-e913-a233.jp.ngrok.io>Go</a></li>
 </ul>
